feat: Implement the backend pipeline